--- a/domovra_dev/app/templates/tools/_about.html
+++ b/domovra_dev/app/templates/tools/_about.html
@@ -26,7 +26,7 @@
             {% if ABOUT.addon.documentation %}
             <div>
                 <dt>Documentation</dt>
-                <dd><a href="{{ ABOUT.addon.documentation }}" target="_blank" rel="noreferrer">Ouvrir</a></dd>
+                <dd><a href="{{ ABOUT.addon.documentation }}" target="_blank" rel="noreferrer">Voir</a></dd>
             </div>
             {% endif %}
             {% if ABOUT.addon.issue_tracker %}
